tests/paczka1/small_fuzzy/40099543.err
Error in line 3: GiU A287 56,9
Error in line 13: ESSWuvt0 A694 53,8
